; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/xen/extr_enlighten_pv.c_xen_write_gdt_entry.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/xen/extr_enlighten_pv.c_xen_write_gdt_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.desc_struct = type { i32 }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.desc_struct*, i32, i8*, i32)* @xen_write_gdt_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xen_write_gdt_entry(%struct.desc_struct* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.desc_struct*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_3__, align 4
  store %struct.desc_struct* %0, %struct.desc_struct** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load %struct.desc_struct*, %struct.desc_struct** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i8*, i8** %7, align 8
  %13 = load i32, i32* %8, align 4
  %14 = call i32 @trace_xen_cpu_write_gdt_entry(%struct.desc_struct* %10, i32 %11, i8* %12, i32 %13)
  %15 = call i32 (...) @preempt_disable()
  %16 = load i32, i32* %8, align 4
  switch i32 %16, label %18 [
    i32 129, label %17
    i32 128, label %17
  ]

17:                                               ; preds = %4, %4
  br label %36

18:                                               ; preds = %4
  %19 = load %struct.desc_struct*, %struct.desc_struct** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds %struct.desc_struct, %struct.desc_struct* %19, i64 %21
  %23 = call i32 @arbitrary_virt_to_machine(%struct.desc_struct* %22)
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  store i32 %23, i32* %24, align 4
  %25 = call i32 (...) @xen_mc_flush()
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i8*, i8** %7, align 8
  %29 = bitcast i8* %28 to i32*
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @HYPERVISOR_update_descriptor(i32 %27, i32 %30)
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %18
  %34 = call i32 (...) @BUG()
  br label %35

35:                                               ; preds = %33, %18
  br label %36

36:                                               ; preds = %35, %17
  %37 = call i32 (...) @preempt_enable()
  ret void
}

declare dso_local i32 @trace_xen_cpu_write_gdt_entry(%struct.desc_struct*, i32, i8*, i32) #1

declare dso_local i32 @preempt_disable(...) #1

declare dso_local i32 @arbitrary_virt_to_machine(%struct.desc_struct*) #1

declare dso_local i32 @xen_mc_flush(...) #1

declare dso_local i32 @HYPERVISOR_update_descriptor(i32, i32) #1

declare dso_local i32 @BUG(...) #1

declare dso_local i32 @preempt_enable(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
